# local-runtime-autofixer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: example_autofix.py  example_autofix_complete.py  example_conc.py  example_nested.py  external_module.py
local_runtime_autofixer/: autofixer.py
local_runtime_autofixer/agents/: agents_factory.py  prompts.py  tools.py
local_runtime_autofixer/utils/: custom_exceptions.py  incident_handler.py  miscellaneous.py  models.py
tests/test_agents/: test_model_factory.py
tests/test_core/: test_autofixer.py
tests/test_utils/: test_incident_handler.py  test_misc.py
